--- a/mySite/css/styles.css
+++ b/mySite/css/styles.css
@@ -1,11 +1,17 @@
+
 .nameHead{
     color:rgb(12, 12, 12);
     float:left;
     margin-left:40px;
     margin-top:10px ;
-    margin-bottom:1em;
     /* border:10px solid white; */
     text-size-adjust: auto;
+}
+body{
+    background-image: url("../images/bg.jpg");
+    background-repeat: stretch;
+    
+  background-attachment: fixed;
 }
 .imageHead{
     width: 10%;
@@ -16,16 +22,6 @@
     margin-top: 20px;
     max-width: 200px;
     border-radius: 10px;
-
-
-
-
-
-
-
-
-
-
     
 }
 .centered{
@@ -38,9 +34,49 @@
     text-align:left;
 }
 .intro{
+    font-size:12px;
     padding-left:1%;
     margin-left:2%;
     border: 1px solid black;
-    float: left;
     width:80%;
+}
+.projects{
+    border:1px black solid;
+    margin-left:20px;
+    margin-top:10px;
+    width:80%;
+    
+}
+#projects{
+    
+    font-size: 25px;
+    text-decoration: none;
+
+}
+.project{
+    text-align: left;
+    font-size: 20px;;
+}
+.para{
+    margin:0px;
+    text-indent: 20px;
+    font-size: 12px;
+}
+.list{
+    font-size: 10px;
+    border:1px black dotted;
+    padding-left:17px;
+    margin-left:30px;
+    margin-top: 0px;;
+    padding-top: 0px;;
+    width:80px;
+}
+.list2{
+    font-size: 10px;
+    border:1px black dotted;
+    padding-left:17px;
+    margin-left:30px;
+    margin-top: 0px;;
+    padding-top: 0px;;
+    width:100px;
 }
